modification de la barre de saisie de message

--- a/Index.html
+++ b/Index.html
@@ -97,8 +97,8 @@
                 <legend>informations personnelle</legend>
             </fieldset>
 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
+            <label for="message">Message :</label><br>
+            <textarea id="message" name="message" placeholder="Écrivez votre message ici..." required></textarea><br>
             <button type="submit">Envoyer</button>
 
         </section>
