--- a/Index.html
+++ b/Index.html
@@ -9,30 +9,27 @@
           
     </head>
 
-   <body>
-       <!-- Barre de navigation -->
-       <nav>
-            <ul>
-               <li><a href="#home">ACCEUIL</a></li>
-               <li><a href="#about">À PROPOS</a></li>
-               <li><a href="#work">TRAVAIL</a></li>
-               <li><a href="#cv">CV</a></li>
-               <li><a href="#contact">CONTACT</a></li>
-            </ul>
+    <header>
+        <nav>
+           <ul>
+              <li><a href="#home">ACCEUIL</a></li>
+              <li><a href="#about">À PROPOS</a></li>
+              <li><a href="#work">TRAVAIL</a></li>
+              <li><a href="#cv">CV</a></li>
+              <li><a href="#contact">CONTACT</a></li>
+           </ul>
        </nav>
+   </header>
 
-    
-        <!-- Section Accueil -->
+   <body>
         <section id="home">
             <h1>Bienvenue sur mon Portfolio</h1>
             <p>Bonjour et bienvenue sur mon portfolio ! Je suis Jean-hamed, développeur web junior passionné par la création d'expériences numériques dynamiques et intuitives. Depuis mes débuts dans le domaine, j'ai cultivé des compétences techniques et créatives pour concevoir des solutions adaptées aux besoins variés de mes clients et projets.</p>
             <p>Explorez mes projets, compétences et expériences.</p>
         </section>
 
-         <!-- Section À propos -->
          <section id="about">
             <h2>À propos</h2>
-            <h3>Qui suis-je ?</h3>
             <p>Développeur web avec une passion pour le code et le design, je combine créativité et logique pour donner vie à des sites modernes et performants. Mon objectif est de traduire les idées en interfaces fonctionnelles et attrayantes, tout en respectant les normes actuelles du web.</p>
 
             <video controls>
@@ -41,7 +38,6 @@
             </video>
         </section>
 
-        <!-- Section Travail -->
         <section id="work">
             <h2>Travail</h2>
             <P><strong>Portfolio personnel :</strong> Ce projet reflète mes compétences en conception, développement et gestion de projet. Le site est entièrement réactif et optimisé pour différents navigateurs.</P>
@@ -55,7 +51,6 @@
             </ul>
        </section>
 
-        <!-- Section CV -->
         <section id="cv">
         <h2>CV</h2>
 
@@ -82,7 +77,6 @@
 
     </section>
 
-        <!-- Section Contact -->
         <section id="contact">
             <h2>Contactez-moi</h2>
             <P>Si vous avez une idée de projet ou simplement envie d'échanger, je suis disponible pour en discuter. Vous pouvez me joindre via [email professionnel] ou [lien vers LinkedIn/GitHub]. Je vous invite à explorer mon portfolio et à découvrir mes projets. Merci de votre visite, et au plaisir de collaborer !</P>
@@ -105,7 +99,6 @@
 
         </section>
 
-        <!-- Pied de page -->
         <footer>
             <p>&copy; 2024 Mon Portfolio. Tous droits réservés.</p>
             <p>Suivez-moi sur : <a href="https://linkedin.com">LinkedIn</a> | <a href="https://github.com">GitHub</a></p>
