--- a/Index.html
+++ b/Index.html
@@ -101,7 +101,7 @@
 
         <footer>
             <p>&copy; 2024 Mon Portfolio. Tous droits réservés.</p>
-            <p>Suivez-moi sur : <a href="https://linkedin.com">LinkedIn</a> | <a href="https://github.com">GitHub</a></p>
+            <p>Suivez-moi sur : <a href="lien">LinkedIn</a> | <a href="lien">GitHub</a></p>
         </footer>
    </body>
 </html>
