--- a/Index.html
+++ b/Index.html
@@ -45,9 +45,9 @@
             <P><strong>Blog dynamique :</strong> Développement d'un blog avec une interface utilisateur simple, des fonctionnalités d'inscription et de commentaires.</P>
 
             <ul>
-                <li>Projet 1: <a href="projet1.html">E-commerce</a></li>
-                <li>Projet 2: <a href="projet2.html">Portfolio</a></li>
-                <li>Projet 3: <a href="projet3.html">Blog dynamique</a></li>
+                <li>Projet 1: <a href="https://www.jumia.ci">E-commerce</a></li>
+                <li>Projet 2: <a href="https://portfolio.adobe.com">Portfolio</a></li>
+                <li>Projet 3: <a href="https://www.blogger.com">Blog dynamique</a></li>
             </ul>
        </section>
 
@@ -101,7 +101,7 @@
 
         <footer>
             <p>&copy; 2024 Mon Portfolio. Tous droits réservés.</p>
-            <p>Suivez-moi sur : <a href="lien">LinkedIn</a> | <a href="lien">GitHub</a></p>
+            <p>Suivez-moi sur : <a href="https://www.facebook.com/">facebook</a> | <a href="https://www.instagram.com/">instagram</a> | <a href="https://github.com/">GitHub</a></p>
         </footer>
    </body>
 </html>
