ajout de bordure pour le tableau

--- a/Index.html
+++ b/Index.html
@@ -21,14 +21,16 @@
        </nav>
    </header>
 
+<hr>
+
    <body>
-        <section id="home">
+        <section id="Acceuil">
             <h1>Bienvenue sur mon Portfolio</h1>
             <p>Bonjour et bienvenue sur mon portfolio ! Je suis Jean-hamed, développeur web junior passionné par la création d'expériences numériques dynamiques et intuitives. Depuis mes débuts dans le domaine, j'ai cultivé des compétences techniques et créatives pour concevoir des solutions adaptées aux besoins variés de mes clients et projets.</p>
             <p>Explorez mes projets, compétences et expériences.</p>
         </section>
 
-         <section id="about">
+         <section id="A propos">
             <h2>À propos</h2>
             <p>Développeur web avec une passion pour le code et le design, je combine créativité et logique pour donner vie à des sites modernes et performants. Mon objectif est de traduire les idées en interfaces fonctionnelles et attrayantes, tout en respectant les normes actuelles du web.</p>
 
@@ -38,7 +40,7 @@
             </video>
         </section>
 
-        <section id="work">
+        <section id="Travail">
             <h2>Travail</h2>
             <P><strong>Portfolio personnel :</strong> Ce projet reflète mes compétences en conception, développement et gestion de projet. Le site est entièrement réactif et optimisé pour différents navigateurs.</P>
             <P><strong>E-commerce :</strong> Création d'un site pour une boutique en ligne avec une gestion complète des produits, des commandes et un système de paiement sécurisé.</P>
@@ -51,10 +53,10 @@
             </ul>
        </section>
 
-        <section id="cv">
+        <section id="CV">
            <h2>CV</h2>
 
-           <table>  
+           <table border="i">  
                <tr>
                   <th>Année</th>
                   <th>Expérience</th>
@@ -86,7 +88,6 @@
             
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
-            
                 </form>
                 <legend>informations personnelle</legend>
             </fieldset>
@@ -94,8 +95,9 @@
             <label for="message">Message :</label><br>
             <textarea id="message" name="message" placeholder="Écrivez votre message ici..." required></textarea><br>
             <button type="submit">Envoyer</button>
-
         </section>
+
+<hr>
 
         <footer>
             <p>&copy; 2024 Mon Portfolio. Tous droits réservés.</p>
