--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-    
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
@@ -35,8 +35,7 @@
             <p>Développeur web avec une passion pour le code et le design, je combine créativité et logique pour donner vie à des sites modernes et performants. Mon objectif est de traduire les idées en interfaces fonctionnelles et attrayantes, tout en respectant les normes actuelles du web.</p>
 
             <video controls>
-                <source src="Video Portfolio (French).mp4" type="video/mp4" with="1000">
-                Votre navigateur ne supporte pas la vidéo.
+                <source src="Video Portfolio (French).mp4" type="video/mp4" with="1à00">
             </video>
         </section>
 
