attrubut de class ajouter

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     </head>
 
     <header>
-        <nav>
+        <nav class="navigation">
            <ul>
               <li><a href="#home">ACCEUIL</a></li>
               <li><a href="#about">À PROPOS</a></li>
@@ -24,13 +24,13 @@
 <hr>
 
    <body>
-        <section id="home">
+        <section class="home">
             <h1>Bienvenue sur mon Portfolio</h1>
             <p>Bonjour et bienvenue sur mon portfolio ! Je suis Jean-hamed, développeur web junior passionné par la création d'expériences numériques dynamiques et intuitives. Depuis mes débuts dans le domaine, j'ai cultivé des compétences techniques et créatives pour concevoir des solutions adaptées aux besoins variés de mes clients et projets.</p>
             <p>Explorez mes projets, compétences et expériences.</p>
         </section>
 
-         <section id="about">
+         <section class="about">
             <h2>À propos</h2>
             <p>Développeur web avec une passion pour le code et le design, je combine créativité et logique pour donner vie à des sites modernes et performants. Mon objectif est de traduire les idées en interfaces fonctionnelles et attrayantes, tout en respectant les normes actuelles du web.</p>
 
@@ -39,7 +39,7 @@
             </video>
         </section>
 
-        <section id="work">
+        <section class="work">
             <h2>Travail</h2>
             <P><strong>Portfolio personnel :</strong> Ce projet reflète mes compétences en conception, développement et gestion de projet. Le site est entièrement réactif et optimisé pour différents navigateurs.</P>
             <P><strong>E-commerce :</strong> Création d'un site pour une boutique en ligne avec une gestion complète des produits, des commandes et un système de paiement sécurisé.</P>
@@ -52,7 +52,7 @@
             </ul>
        </section>
 
-        <section id="CV">
+        <section class="CV">
            <h2>CV</h2>
 
            <table border="i">  
@@ -76,7 +76,7 @@
            </table>
         </section>
 
-        <section id="contact">
+        <section class="contact">
             <h2>Contactez-moi</h2>
             <P>Si vous avez une idée de projet ou simplement envie d'échanger, je suis disponible pour en discuter. Vous pouvez me joindre via [email professionnel] ou [lien vers LinkedIn/GitHub]. Je vous invite à explorer mon portfolio et à découvrir mes projets. Merci de votre visite, et au plaisir de collaborer !</P>
 
